<resources>
    <string name="app_name">EasyMusic</string>
    <string name="content_welcome">欢迎使用EasyMusic</string>
    <string name="action_ok">确定</string>
    <string name="action_cancel">取消</string>
    <string name="error_empty_list_name">列表名不能为空</string>

    <string name="title_fragment_song_list_list">所有列表</string>

    <string name="error_read_list_error">读取列表失败</string>

    <string name="title_menu_edit">编辑</string>
    <string name="title_menu_check_all">全选</string>
    <string name="title_menu_finish">完成</string>
    <string name="title_menu_delete">删除</string>

    <string name="error_no_permission">获取权限失败</string>
    <string name="hint_no_song_playing">当前无歌曲正在播放</string>
    <string name="hint_time_0">0:00</string>
    <string name="history">历史记录</string>
    <string name="title_activity_playing_list">播放列表</string>
    <string name="title_activity_history">历史记录</string>
    <string name="title_menu_add">添加</string>
    <string name="title_add_to_list">添加到列表</string>
    <string name="error_no_songs_checked">未选择歌曲</string>
    <string name="title_add_to_play_list">添加到播放列表</string>
    <string name="error_no_lists_checked">未选中列表项</string>
    <string name="title_menu_sort">排序</string>
    <string name="title_menu_track">改变音轨</string>
    <string name="error_no_selectable_track_info">没有可选择音轨</string>
    <string name="error_low_version">当前系统版本不支持调整音轨</string>
</resources>
