<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/list_edit"
        android:title="@string/title_menu_edit"
        android:icon="@drawable/ic_mode_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_add"
        android:title="@string/title_menu_add"
        android:icon="@drawable/ic_add"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_check_all"
        android:title="@string/title_menu_check_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_complete"
        android:title="@string/title_menu_finish"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_delete"
        android:title="@string/title_menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_add_to_music_list"
        android:title="@string/title_add_to_list"
        android:icon="@drawable/ic_list_add"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_add_to_play_list"
        android:title="@string/title_add_to_play_list"
        android:icon="@drawable/ic_add_to_queue"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>
